--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/styled": "11.1.5",
     "@supabase/supabase-js": "^1.22.5",
     "framer-motion": "^4.0.3",
-    "next": "latest",
+    "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
